# flappy_automation_test

./: README.md
flappy_automation_code/: CMakeLists.txt
flappy_automation_code/include/flappy_automation_code/: FlappyNavigation.hpp  PipeGapTracker.hpp  flappy_automation_code.hpp
flappy_automation_code/launch/: flappy_automation_code_cpp.launch
flappy_automation_code/src/: FlappyNavigation.cpp  PipeGapTracker.cpp  flappy_automation_code.cpp
flappy_main_game/scripts/: flappy.py
